<resources>
    <string name="app_name">Attendance</string>
    <string name="email_placeholder">Email</string>
    <string name="pass_placeholder">Password</string>
    <string name="bt_signIn">LOG IN</string>
    <string name="bt_reg">REGISTER</string>
    <string name="forgot">Forgot Password?</string>
    <string name="repass">Re-Enter Password</string>
    <string name="name">Name</string>
    <string name="roll">Roll no</string>
    <string name="add_student">Add Student</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="teacher">Teacher</string>
    <string name="course_code">Course Code</string>
    <string name="course_name">Course Name</string>
    <string name="course_add">Add Course</string>
    <string name="slect_course">Slect Course:</string>
    <string name="english_code">E101</string>
    <string name="math_code">M101</string>
    <string name="java_code">J101</string>
    <string name="contact">Contact Number</string>
    <string name="student">Student</string>
    <string name="course">Course</string>
    <string name="attendance">Attendance</string>
    <string name="take_attandance">Take Attendance</string>
    <string name="view_attandance">View Attendance</string>
    <string name="change_password">Change Password</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="cd_showHide">Show Hide</string>
    <string name="title_activity_admin_">Admin_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_admin2">Admin2Activity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_admin">AdminActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_teacher">TeacherActivity</string>
</resources>
