<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragment.Take_attendanceFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/et_rePass_t"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="20dp"
            android:hint="@string/repass"
            android:inputType="textPassword"
            android:importantForAutofill="no" />
        <RadioButton
            android:id="@+id/rb_take_attendance_t"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_toRightOf="@id/tv_present_t"
            android:layout_below="@id/et_rePass_t"
            android:layout_margin="10dp"
            android:src="@drawable/baseline_visibility_black_18dp"
            android:contentDescription="@string/cd_showHide" />
        <TextView
            android:id="@+id/tv_absent_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_centerVertical="true"
            android:layout_below="@id/et_rePass_t"
            android:text="@string/absent"
            android:layout_toRightOf="@id/rb_take_attendance_t"/>
        <RadioButton
            android:id="@+id/rb_take_attendance1_t"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/et_rePass_t"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:src="@drawable/baseline_visibility_black_18dp"
            android:contentDescription="@string/cd_showHide" />
        <TextView
            android:id="@+id/tv_present_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_centerVertical="true"
            android:layout_below="@id/et_rePass_t"
            android:text="@string/present"
            android:layout_toRightOf="@id/rb_take_attendance1_t"/>
    </RelativeLayout>

</LinearLayout>
